# pytractions

./: README.md  pyproject.toml  requirements-test.txt  requirements.txt  setup.py  tox.ini  tractorview.html
.github/workflows/: build.yml  release.yml  tox-tests.yml
docker/: Dockerfile
docs/source/: code.rst  conf.py  index.rst
examples/: run_example.py  type_dump.py
examples/models/: file.py  gcrp_models.py  nlp_models.py  operator.py
examples/relations/: relations-server.py  relations.py  tclimber.py
examples/resources/: dirlister.py  gcrp_clients.py  json_store.py  rng.py
examples/tractions/: basic.py  file_tractions.py  gcrp_tractions.py  nlp_tractions.py  relations.html  relations.py  utils.py
pytraction/: abase.py  base.py  catalog.py  cli.py  container_runner.py  exc.py  monitor.py  runner.py  runner_utils.py  traction.py  tractor.py  types.py  utils.py
pytractions/: abase.py  base.py  base_field.py  catalog.py  cli.py  container_runner.py  exc.py  executor.py  graph.py  monitor.py  observer.py  pkgutils.py  runner.py  runner_utils.py  stmd.py  stmd_utils.py  traction.py  tractor.py  transformations.py  traversal.py  types.py  utils.py  validators.py
tests/: conftest.py  models.py  test_base.py  test_base_serialization.py  test_base_tdict.py  test_base_tlist.py  test_base_traction.py  test_in.py  test_inputs.py  test_observers.py  test_out.py  test_simple_io.py  test_stepng.py  test_stmd.py  test_traction.py  test_tractor.py  test_transformations.py  test_types.py
traction-runner-webui/: package-lock.json  package.json
(+35 files in other folders)
