[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "pytractions"
version =  "0.0.8"
description = "Pytractions is python framework for modular programming."
readme = "README.md"
authors = [
    { name = "Jindrich Luza", email = "jluza@redhat.com" }
]
license = { text = "LGPL-3.0-only" }
requires-python = ">=3.6"
dependencies = [
    "pyyaml",
    "lark",
    "jsonschema",
    "typing_extensions",
    "protobuf<6.0.0",
    "ray"
]
dynamic=["entry-points"]

[project.urls]
Homepage = "https://github.com/midnightercz/pytractions"

[tool.setuptools]
package-dir = {"" = "pytractions"}

[tool.setuptools.dynamic]
entry-points = { file = "pytractions/entry_points.txt" }

[tool.setuptools.package-data]
"*" = ["*.txt", "*.rst"]
